src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__artist_details_ui__artist_details_ui_tests__tests__snapshot_tests__artist_details_ArtistHistoryDetails_1.snap
---
source: src/ui/lidarr_ui/library/artist_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
        ╭  Alex  ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮        
        │Artist: Alex                                                                                                                                       │        
        │Overview: some interesting description of the artistShe was born in Madison, Wisconsin: a city she has never really left.Her first album took her  │        
        │seven years to finish.                                                                                                                             │        
        │Disambiguation: American pianist                                                                                                                   │        
        │Type: Person                                                                                                                                       │        
        │Status: Continuing                                                                                                                                 │        
        │Genres: soundtrack                                                                                                                                 │        
        │Rating: 84%                                                                                                                                        │        
        │Path: /nfs/music/test-artist                                                                                                                       │        
        │Quality Profile: Lossless                                                                                                                          │        
        │Metadata Profile: Standard                                                                                                                         │        
        │Monitored: Yes                                                                                                                                     │        
        │Albums: 1                       ╭───────────────────────────────────  Details  ───────────────────────────────────╮                                │        
        │Tracks: 15/15                   │Source Title: Test source title                                                  │                                │        
        │╭  Artist Details  ─────────────│Event Type: grabbed                                                              │───────────────────────────────╮│        
        ││ Albums │ History │ Manual Sear│Quality: Lossless                                                                │                               ││        
        ││───────────────────────────────│Date: 2023-01-01 00:00:00 UTC                                                    │───────────────────────────────││        
        ││   Source Title ▼              │Indexer:                                                                         │                               ││        
        ││=> Test source title           │NZB Info URL:                                                                    │-01-01 00:00:00 UTC            ││        
        ││                               │Release Group:                                                                   │                               ││        
        ││                               │Age: 0 days                                                                      │                               ││        
        ││                               │Published Date: 1970-01-01 00:00:00 UTC                                          │                               ││        
        ││                               │Download Client:                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               │                                                                                 │                               ││        
        ││                               ╰─────────────────────────────────────────────────────────────────────────────────╯                               ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        ││                                                                                                                                                 ││        
        │╰─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯│        
        ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
